[package]
name = "tm1637-display-demo"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
nb = "0.1"
embedded-hal = "0.2.2"

[dependencies.stm32f1xx-hal]
version = "0.2.1"
features = ["stm32f103", "rt"]
